--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Fungame Catur.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Chess Fungame.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">This is my design at Black Militant 2021</p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
