--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>WCC Competition - Fadly Firmansyah Putra</title>
+        <title>Portfolio Web - Fadly Firmansyah Putra</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/f_M9z_icon.ico" />
         <!-- Font Awesome icons (free version)-->
